# poleis-qfluentwidgets

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: qfluentwidgetsConfig.cmake.in
qfluentwidgets/common/: animation.cpp  animation.h  auto_wrap.h  config.cpp  config.h  font.h  icon.cpp  icon.h  router.h  signal_bus.h  smooth_scroll.cpp  smooth_scroll.h  style_sheet.cpp  style_sheet.h  translator.h
qfluentwidgets/components/date_time/: calendar_picker.cpp  calendar_picker.h  calendar_view.h  date_picker.h  picker_base.cpp  picker_base.h  time_picker.h
qfluentwidgets/components/dialog_box/: color_dialog.cpp  color_dialog.h  dialog.h  folder_list_dialog.cpp  folder_list_dialog.h  mask_dialog_base.h  message_box_base.h  message_dialog.h
qfluentwidgets/components/layout/: expand_layout.h  flow_layout.h  v_box_layout.h
qfluentwidgets/components/material/: acrylic_flyout.h  acrylic_line_edit.h  acrylic_menu.cpp  acrylic_menu.h
qfluentwidgets/components/navigation/: breadcrumb.cpp  breadcrumb.h  navigation_bar.h  navigation_interface.h  navigation_panel.h  navigation_widget.cpp  navigation_widget.h  pivot.h  segmented_widget.h
qfluentwidgets/components/settings/: custom_color_setting_card.h  expand_setting_card.cpp  expand_setting_card.h  folder_list_setting_card.h  options_setting_card.cpp  options_setting_card.h  setting_card.cpp  setting_card.h  setting_card_group.h
qfluentwidgets/components/widgets/: arcylic_label.cpp  arcylic_label.h  button.cpp  button.h  card_widget.cpp  card_widget.h  check_box.cpp  check_box.h  combo_box.h  command_bar.cpp  command_bar.h  cycle_list_widget.cpp  cycle_list_widget.h  flip_view.cpp  flip_view.h  flyout.cpp  flyout.h  icon_widget.cpp  icon_widget.h  info_badge.h  info_bar.cpp  info_bar.h  label.h  line_edit.h  list_view.cpp  list_view.h  menu.cpp  menu.h  pips_pager.cpp  pips_pager.h  progress_bar.h  progress_ring.h  scroll_area.h  scroll_bar.cpp  scroll_bar.h  separator.h  slider.cpp  slider.h  spin_box.h  stacked_widget.h  (+12 more)
qfluentwidgets/config/: config.ini
qfluentwidgets/multimedia/: media_play_bar.cpp  media_play_bar.h  media_player.cpp  media_player.h  video_widget.cpp  video_widget.h
qfluentwidgets/qframelesswindow/titlebar/: title_bar_buttons.cpp  title_bar_buttons.h  titlebar.cpp  titlebar.h
qfluentwidgets/qframelesswindow/utils/: win32_utils.cpp  win32_utils.h
qfluentwidgets/qframelesswindow/windows/: qframe_less_window.cpp  qframe_less_window.h  qframe_less_window_stub.cpp  window_effect.cpp  window_effect.h
qfluentwidgets/test/: acrylic_brush_test.cpp  acrylic_flyout_test.cpp  avatar_widget_test.cpp  breadcrumb_bar_test.cpp  button_test.cpp  calendar_picker_test.cpp  card_widget_test.cpp  check_box_test.cpp  color_dialog_test.cpp  combo_box_test.cpp  command_bar_test.cpp  custom_message_box_test.cpp  dialog_test.cpp  flip_view_test.cpp  flow_layout_test.cpp  flyout_test.cpp  folder_list_dialog_test.cpp  gallery_test.cpp  info_badge_test.cpp  info_bar_test.cpp  label_test.cpp  line_edit_test.cpp  list_view_test.cpp  login_window.cpp  login_window.h  media_player_test.cpp  menu_test.cpp  message_dialog_test.cpp  navigation1_test.cpp  navigation2_test.cpp  navigation3_test.cpp  navigation_bar_test.cpp  pips_pager_test.cpp  pivot_test.cpp  progress_bar_test.cpp  progress_ring_test.cpp  radio_button_test.cpp  scroll_area_test.cpp  segmented_tool_widget_test.cpp  segmented_widget_test.cpp  (+14 more)
qfluentwidgets/test/gallery/view/: dialog_interface.cpp  main_window.cpp  main_window.h  menu_interface.h  setting_interface.cpp
qfluentwidgets/test/settings_test/: setting_interface.cpp
qfluentwidgets/window/: fluent_window.cpp  fluent_window.h  splash_screen.h  stacked_widget.h
